--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "react-native": {
     "./lib/ClientDevice": "./lib/ClientDevice/reactnative.js",
     "./lib/RNComponents": "./lib/RNComponents/reactnative.js",
-    "./lib/Common/StorageHelper": "./lib/StorageHelper/reactnative.js"
+    "./lib/StorageHelper": "./lib/StorageHelper/reactnative.js"
   },
   "repository": {
     "type": "git",
