adding testURL to jest config for /core

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>../../node_modules/ts-jest/preprocessor.js"
     },
+
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
     "moduleFileExtensions": [
       "ts",
@@ -80,6 +81,7 @@
         "statements": 0
       }
     },
+    "testURL": "http://localhost/",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
